--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="A website that provides user with all kind of trending news whether it is related to politics, entertainment or sports."
     />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
